# basketball_metric_bonanza

./: .gitignore  README.md  pyproject.toml
notebooks/: workings.ipynb
scripts/: gamelog_scraper.py  gamelog_scraper_v2.py  league_overviews_scraper.py  player_scraper.py  player_url_finder.py  teams_scraper.py
utils/: bs_helpers.py
